<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.screens.shoe.ShoeViewModel" />

<!--        <variable-->
<!--            name="shoe"-->
<!--            type="com.udacity.shoestore.models.Shoe" />-->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGreen">

        <TextView
            android:id="@+id/shoe_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:text="@string/shoe_name_text"
            android:textColor="@color/colorTan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/company_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/company_name_text"
            android:textColor="@color/colorTan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.057"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_name_edit" />

        <TextView
            android:id="@+id/shoe_size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/shoe_size_text"
            android:textColor="@color/colorTan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_company_edit" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/description_text"
            android:textColor="@color/colorTan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_shoe_size_edit" />

        <EditText
            android:id="@+id/enter_name_edit"
            android:layout_width="377dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_name_hint_text"
            android:inputType="textPersonName"
            android:text="@={shoeViewModel.myShoe.name}"
            android:textColorHint="@color/colorTan"
            android:textColor="@color/colorTan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_text" />

        <EditText
            android:id="@+id/enter_company_edit"
            android:layout_width="377dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_company_hint_text"
            android:inputType="textPersonName"
            android:text="@={shoeViewModel.myShoe.company}"
            android:textColorHint="@color/colorTan"
            android:textColor="@color/colorTan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_name_text" />

        <EditText
            android:id="@+id/enter_shoe_size_edit"
            android:layout_width="377dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_shoe_size_hint_text"
            android:inputType="numberDecimal"
            android:text="@={`` + shoeViewModel.myShoe.size}"
            android:textColorHint="@color/colorTan"
            android:textColor="@color/colorTan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_text" />

        <EditText
            android:id="@+id/enter_description_edit"
            android:layout_width="377dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_description_hint_text"
            android:inputType="textPersonName"
            android:text="@={shoeViewModel.myShoe.description}"
            android:textColorHint="@color/colorTan"
            android:textColor="@color/colorTan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorTan"
            android:onClick="@{() -> shoeViewModel.onSave()}"
            android:text="@string/save_button_text"
            android:textColor="@color/colorGreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_description_edit" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:background="@color/colorTan"
            android:onClick="@{() -> shoeViewModel.onCancel()}"
            android:text="@string/cancel_button_text"
            android:textColor="@color/colorGreen"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_description_edit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>