<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorGreen">


    <TextView
        android:id="@+id/welcome_text_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto"
        android:padding="@dimen/padding_for_textviews"
        android:text="@string/welcome_text_one"
        android:textAlignment="center"
        android:textColor="@color/colorTan"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_text_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="@dimen/padding_for_textviews"
        android:text="@string/welcome_text_two"
        android:textAlignment="center"
        android:textColor="@color/colorTan"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_one"
        tools:text="@string/welcome_text_two" />

    <Button
        android:id="@+id/welcome_button"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@color/colorTan"
        android:text="@string/welcome_button"
        android:textColor="@color/colorGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_two"
        app:layout_constraintVertical_bias="0.242" />
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>